--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,8 @@
 .cButton:active {
   background-color: rgba(224, 252, 254, 0.25) !important
 }
+
+#burger:active {
+  outline: 1px solid rgba(224, 252, 254, 0.75);
+  outline-offset: 6px;
+}
